--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -10,6 +10,9 @@ defusedxml==0.7.1
 distlib==0.3.0
 distro==1.4.0
 Django==2.2.17
+django-debug-toolbar==3.2
+django-debug-toolbar-template-profiler==2.0.2
+django-extensions==3.1.1
 html5lib==1.0.1
 idna==2.10
 ipaddr==2.2.0
@@ -29,11 +32,11 @@ pytz==2020.5
 requests==2.25.1
 requests-oauthlib==1.3.0
 retrying==1.3.3
+siege==0.0.2
 six==1.15.0
 social-auth-app-django==3.4.0
 social-auth-core==4.1.0
 sqlparse==0.4.1
 urllib3==1.26.4
 webencodings==0.5.1
-pip install django-debug-toolbar
-pip install django-debug-toolbar-template-profiler
+wrapt==1.12.1
